Games, checks, managers